# StockMarketAgent2

./: .env.example  .gitignore  README.md  pyproject.toml
src/stockmarketagent2/: crew.py  main.py
src/stockmarketagent2/config/: agents.yaml  tasks.yaml
src/stockmarketagent2/tools/: custom_tool.py
