[project]
name = "stockmarketagent2"
version = "0.1.0"
description = "StockMarketAgent2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai==0.76.2",
    "yfinance",
    "beautifulsoup4",
    "requests",
    "scikit-learn",
    "pydantic",
    "numpy"
]

[project.scripts]
stockmarketagent2 = "stockmarketagent2.main:run"
run_crew = "stockmarketagent2.main:run"
train = "stockmarketagent2.main:train"
replay = "stockmarketagent2.main:replay"
test = "stockmarketagent2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
